1/7/16
  Quit the window manager if no key file found.

17/5/16
  Fix for popped window size on desktop change

14/3/16
  Fix for transient windows disappearing when changing desktops
   with multiple monitors

13/3/16
  Fix for transient windows hiding on unfocused desktop when
   selected with the mouse

27/1/16
  Fix for some transient windows being hidden in fullscreen mode

8/12/15
  Added function last_win() to focus the last focused window

26/11/15
  Fix for destroynotify mapping window from another desktop

24/11/15
  Added option to sticky the focused window on unfocused desktops
   with a keyboard shortcut
  moveresize popped windows in fullscreen mode on desktop change

23/11/15
  Fix for popping a window back with one window in fullscreen mode

22/11/15
  Fix for window not unmapping when client_to_desktop used

21/11/15
  Added reserved CMD in key.conf, barrtclickcmd, for right clicking 
  the bar to run a command

16/11/15
  Added man page

13/11/15
  Change modifyer key ALTSuper to AltSuper for
   consistentcy
  In rc.conf one value for defaultmode will set all
   desktops to that mode

19/9/15
  No useless gaps in fullscreen mode

13/8/15
  Fix for window unmapping error with multiple screens

10/8/15
  Fix for xsetroot failing

17/7/15
  Fix for floating windows mapping off screen

14/7/15
  Fix for clicking on the focused desktop in the
   switcher with no open windows killing the wm

13/7/15
  Fix for floating window not mapped on focused desktop
   on unfocused screen

12/7/15
  Fix floating window mapping order

10/7/15
  Fix for remove_window mapping error
  Fix for client_to_desktop mapping error

8/7/15
  Added keyboard shortcut to pop a window out from the
   tiles
  Added option in apps.conf to match window to be popped
   on opening
  Added option in the rc.conf to have useless gaps around
   the bar

7/7/15
  Reworked change_desktop()
  Fix for transient windows not being focused when clicked
   on