@@ -28,33 +28,42 @@ void configurerequest(XEvent *e) {
 void maprequest(XEvent *e) {
     XMapRequestEvent *ev = &e->xmaprequest;
 
-    XGetWindowAttributes(dis, ev->window, &attr);
+    map_window(ev->window);
+}
+
+void map_window(Window neww) {
+    if(XGetWindowAttributes(dis, neww, &attr) == 0) return;
     if(attr.override_redirect == True) return;
-    if(check_dock(ev->window) == 0) {
-         XMapWindow(dis,ev->window);
+    if(check_dock(neww) == 0) {
+         XMapWindow(dis,neww);
          return;
     }
 
     // For fullscreen mplayer (and maybe some other program)
     client *c;
     for(c=head;c;c=c->next)
-        if(ev->window == c->win) {
-            XMapWindow(dis,ev->window);
+        if(neww == c->win) {
+            XMapWindow(dis,neww);
             return;
         }
 
+    unsigned int i=0, j=0, tmp = current_desktop, tmp2, move = 0;
+
+    if(attr.width < minww || attr.height < minwh) {
+        XMoveResizeWindow(dis, neww, attr.x, attr.y, minww, minwh);
+        ++j;
+    }
     Window w;
     w = (numwins > 0) ? current->win:0;
 
-    unsigned int i=0, j=0, tmp = current_desktop, tmp2, move = 0;
     save_desktop(tmp);
     Window trans = None; unsigned int tranny = 0;
-    if (XGetTransientForHint(dis, ev->window, &trans) && trans != None)
+    if (XGetTransientForHint(dis, neww, &trans) && trans != None)
         tranny = 1;
 
-    getwindowname(ev->window, 1);
+    getwindowname(neww, 1);
     XClassHint ch = {0};
-    if(XGetClassHint(dis, ev->window, &ch)) {
+    if(XGetClassHint(dis, neww, &ch)) {
         for(i=0;i<dtcount;++i) {
             if((strcmp(winname, convenience[i].class) == 0) ||
               (tranny == 0 && strcmp(ch.res_class, convenience[i].class) == 0) ||
@@ -70,12 +79,11 @@ void maprequest(XEvent *e) {
                 }
             }
         }
-        j = 0;
         for(i=0;i<pcount;++i) {
             if((strcmp(winname, positional[i].class) == 0) ||
               (tranny == 0 && strcmp(ch.res_class, positional[i].class) == 0) ||
               (tranny == 0 && strcmp(ch.res_name, positional[i].class) == 0)) {
-                XMoveResizeWindow(dis,ev->window,positional[i].x,positional[i].y,positional[i].width,positional[i].height);
+                XMoveResizeWindow(dis,neww,positional[i].x,positional[i].y,positional[i].width,positional[i].height);
                 ++j;
                 break;
             }
@@ -87,26 +95,26 @@ void maprequest(XEvent *e) {
                 ++j;
                 tranny = 1;
                 if((desktops[current_desktop].x+attr.x+attr.width) < (desktops[current_desktop].x+sw))
-                    XMoveResizeWindow(dis, ev->window, desktops[current_desktop].x+attr.x, attr.y, attr.width, attr.height);
+                    XMoveResizeWindow(dis, neww, desktops[current_desktop].x+attr.x, attr.y, attr.width, attr.height);
                 else
-                    XMoveResizeWindow(dis, ev->window, desktops[current_desktop].x+(sw/2)-attr.width/2, attr.y, attr.width, attr.height);
+                    XMoveResizeWindow(dis, neww, desktops[current_desktop].x+(sw/2)-attr.width/2, attr.y, attr.width, attr.height);
                 break;
             }
         }
         if(tranny == 0 && j == 0 && cstack == 0) {
             ++j;
-            XMoveWindow(dis, ev->window,desktops[current_desktop].w/2-(attr.width/2),(desktops[current_desktop].h+sb_height+4+ug_bar)/2-(attr.height/2));
+            XMoveWindow(dis, neww,desktops[current_desktop].w/2-(attr.width/2),(desktops[current_desktop].h+sb_height+4+ug_bar)/2-(attr.height/2));
         }
     }
     if(ch.res_class) XFree(ch.res_class);
     if(ch.res_name) XFree(ch.res_name);
-    if(j > 0) XGetWindowAttributes(dis, ev->window, &attr);
+    if(j > 0) XGetWindowAttributes(dis, neww, &attr);
 
-    add_window(ev->window, tranny, NULL, attr.x, attr.y, attr.width, attr.height);
+    add_window(neww, tranny, NULL, attr.x, attr.y, attr.width, attr.height);
     if(mode == 1 && numwins > 1 && move == 0) XUnmapWindow(dis, w);
     for(i=0;i<num_screens;++i)
         if(current_desktop == view[i].cd) {
-            if(tranny == 1 || mode != 1 ) XMapWindow(dis,ev->window);
+            if(tranny == 1 || mode != 1 ) XMapWindow(dis,neww);
             tile();
         }
     if(move == 0) select_desktop(tmp);
